fix: height block overflow

--- a/02_css_basics/css/base.css
+++ b/02_css_basics/css/base.css
@@ -38,6 +38,14 @@ html {
     color: var(--color-orange-dark);
 }
 
+.overflow-one {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
 .overflow-three {
     overflow: hidden;
     text-overflow: ellipsis;
